feat: Update PoolMatchesDTO to use MatchDTO and add new query in MatchLiveLinkRepository for filtering by match IDs and status